# FENNEC-Modem

./: .gitignore  .gitmodules  README.md
.github/workflows/: hardware_workflow.yml
CAD/: Fan Spacer-Fan Spacer.step  Fan Spacer.20260113-125645.FCBak  Fan Spacer.FCStd
Docs/: Makefile  conf.py  index.rst
Docs/introduction/: getting-started.rst
Docs/service/: service.rst
Firmware/: .gitignore  CMakeLists.txt  Makefile  README.md  frequency_gen.pio  main.c  main.c.old  pico_sdk_import.cmake  platformio.ini
Firmware/include/: LUFAConfig.h
Firmware/lib/shift_register_lcd/: shift_register_display.c  shift_register_display.h
Firmware/src/: Descriptors.h  LUFA.c  VirtualSerial.c  VirtualSerial.h
Hardware/: BackPlane.yaml  FennecModem.yaml  config.kibot.yaml
Hardware/BackPlane/: BackPlane.kicad_pcb  BackPlane.kicad_pro  BackPlane.kicad_sch  fp-lib-table
Hardware/BackPlane/CAD/: Rails-Blank End.step  Rails-Fennec End.step  Rails-Rail Body.step  Rails.FCStd
Hardware/FennecModem/: Audio Processing.kicad_sch  Backplane.kicad_sch  FennecModem.kicad_pcb  FennecModem.kicad_pro  FennecModem.kicad_sch  FennecModem.round-tracks-config  cm108adc-dac.kicad_sch  fp-lib-table  radio.kicad_sch  sym-lib-table  usbserial.kicad_sch
Hardware/FennecModem/Libraries/fennec-modem-libraries/3d/: Fan 30mm.step  Rails-Fennec End.step
Hardware/FennecModem/Libraries/fennec-modem-libraries/fennec.pretty/: FENNEC_QR_CODE.kicad_mod
Hardware/FennecModemSimulation/: Audio Simulation.dat.ngspice  Audio Simulation.sch  MCP6021.txt
